objects/Doctor__c.object
<CustomObject>
    <label>Doctor</label>
    <nameField>
        <label>Doctor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Doctors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Speciality__c</fullName>
        <label>Speciality</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General</fullName>
                    <default>true</default>
                    <label>General</label>
                </value>
                <value>
                    <fullName>Neurology</fullName>
                </value>
                <value>
                    <fullName>Anesthesiology</fullName>
                </value>
                <value>
                    <fullName>Dermatology</fullName>
                </value>
                <value>
                    <fullName>Ophthalmology</fullName>
                </value>
                <value>
                    <fullName>Pathology</fullName>
                </value>
                <value>
                    <fullName>Urology</fullName>
                </value>
                <value>
                    <fullName>Radiology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Doctor_Mail__c</fullName>
        <label>Doctor Mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Doctor_Phone__c</fullName>
        <label>Doctor Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Patients_List__c</fullName>
        <label>Patients List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mental_Patients_List__c</fullName>
        <label>Mental Patients List</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>